refactor: add new attribute for cost estimate